--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,6 @@ org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+
+mavenCentralUsername = EP3cCCef
+mavenCentralPassword = 9pzjCGOm/8RHLE4kRgCbkxsn1kdbaATs2rZQgX58kKr8
